[package]
name = "maelstrom-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloomfilter = { version = "^3.0.1", features = ["serde"] }
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
assert_matches = "1.5.0"
